name:                tasker
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/koval4/tasker#readme
license:             BSD3
license-file:        LICENSE
author:              Roman Kovalivskiy
maintainer:          koval304@gmail.com
copyright:           2016 Roman Kovalivskiy
category:            Other
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable tasker-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.7 && < 5
                     , directory
                     , time
                     , fdo-notify
                     , suspend
                     , timers
                     , tasker
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/koval4/tasker
